added more fixes plu prev manuscript for comparisons

--- a/introduction.tex
+++ b/introduction.tex
@@ -263,7 +263,7 @@ The main contributions of this work can be summarized as:
         compute the probability of that feature.  The introduction of
         the notion of hiding sets of features helps us to achieve
         this. If we want to compute the probability of \fA, we hide
-        the features that do not affect the processing of \fA for
+        the features that do not affect the processing of \fA\ for
         being part of a valid product.  This analysis allows
         optimizing the practical application of the probabilistic
         extension, as it allows us to remove or hide a set of features
