--- a/testing.tex
+++ b/testing.tex
@@ -336,14 +336,14 @@ percentage of features having a conjunction relation may cause a bottleneck in t
 In fact, models generated using \textit{Configuration 3} with 9,000 and 10,000 features cannot be
 processed using 64 GB of RAM. In this case,
 the worst case scenario, which generates a model where the 50\% of the features are
-placed in a conjunction relationship, requires approximately 500000 ms.
+placed in a conjunction relationship, requires approximately 500 seconds.
 
 Figure~\ref{figure:tool:den:benchmark} shows the results of an experiment using
 models containing different number of features, which ranges from $50$ to $300$.
 In this case, we use the implementation of the denotational semantic from
 \fodaPA~\cite{acl13} to process the models, which do not use probabilistic
 information. If we use only the executions that successfully process the model,
-the worst case scenario requires 786126 ms to process a model containing 150
+the worst case scenario requires 786.126 seconds to process a model containing 150
 features.
 
 \begin{figure}[t]
@@ -439,7 +439,7 @@ Following, we provide the answers to the research questions.
 \textbf{RQ1}: Is it possible to translate current feature models to support
 probabilistic information?
 
-In order to ask this question we have implemented the denotational semantic
+In order to answer this question we have implemented the denotational semantic
 of the probabilistic extension. Since our framework is based on \FODA, we
 can state that the answer is yes, it is possible to translate current
 feature models, like \FODA, to represent and support probabilistic
@@ -464,7 +464,7 @@ the current feature models to probabilistic methods.
 \textbf{RQ3}: What is the impact of applying probabilistic analysis methods
 to current feature models like \FODA?
 
-In order to ask this question we carried out some experiments using
+In order to answer this question we carried out some experiments using
 our implementation of the denotational semantic \fodaPA~\cite{acl13}
 and the cost extension \fodaPAc~\cite{clc16}. The results obtained
 have been compared with the implementation of the probabilistic
