update related work

--- a/related_work.tex
+++ b/related_work.tex
@@ -118,6 +118,35 @@ help in the verification of requirements for families of probabilistic systems. 
 together with PRISM~\cite{mgd12}, use their own language and are based on Markov decision processes.
 
 
+
+
+
+% 3) Thank you for explicitly devoting a section to related work.
+% For estimating the contribution of this paper, I still miss a comparison
+% to the approaches mentioned, especially to the ones that use operational
+% semantics. What is the difference of your operational semantics to the ones
+% in [25] (considering the Markov chain fragment) and [32]? The authors might
+% furthermore explain the new sentence "state that state it is possible to
+% describe a formal framework that translates the current feature models to
+% probabilistic methods." as I could not grasp its meaning. Which
+% "probabilistic methods" are meant and how in principle models can
+% be translated to methods?
+
+
+%Comparar nuestro approach con:
+
+%C. Dubsla, C. Baier, and S. Kluppelholz, Probabilistic Model Checking for Feature-
+%17 Oriented Systems, pp. 180{220. Springer Berlin Heidelberg, 2015
+
+%y
+
+%M. Varshosaz and R. Khosravi, \Discrete time markov chain families: Modeling
+%42 and verication of probabilistic software product lines," pp. 34{41, 08 2013.	
+
+
+Particularly when comparing the operational semantics of both~\cite{Dubslaff2015} and~\cite{vk13}    
+with the extension 
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "main"
