--- a/related_work.tex
+++ b/related_work.tex
@@ -100,6 +100,26 @@ provide a literal translation between the existing variability models, like FODA
 and, therefore, these do not provide implementations over their practical uses.
 However, these approaches present analysis techniques that should have
 a significant impact on the effort to compute variability models.
+In specific for ~\cite{vk13} when comparing the way probabilities are computed,
+for each Markov process, the sum of the probabilities of the transitions
+when doing a transition from an state
+to another state must always sum 1.
+%
+In the case of the probabilistic extension
+presented in this research article the sum of all the traces when computing the same
+product must be 1, with some other cases explained in the syntax and semantics section.
+
+Also, the formal representation of~\cite{Dubslaff2015} is given in terms of Markov decision processes for
+representing the probabilistic information, which is not used particularly in this research paper. 
+Instead of having sub-states with the probabilistic information we add the probabilistic data itself to
+the operational semantics definition.
+%
+The compositional framework defined in~\cite{Dubslaff2015} do not have a direct translation from well known graphical
+representations of feature models like \FODA\ making them to skip the representation of other relationships
+commonly represented, like the cross tree constraints for the inclusion or exclusion of specific features. Thus
+they include the parallel composition of the features and a the fact that each feature can have a different cardinality in the
+model, allowing that the same feature can be multiple times in the same product.
+
 
 In previous years, the studies focusing the analysis of variability models  - and
 their practical applications - with realistic use cases 
@@ -144,8 +164,7 @@ together with PRISM~\cite{mgd12}, use their own language and are based on Markov
 %42 and verication of probabilistic software product lines," pp. 34{41, 08 2013.	
 
 
-Particularly when comparing the operational semantics of both~\cite{Dubslaff2015} and~\cite{vk13}    
-with the extension 
+
 
 %%% Local Variables:
 %%% mode: latex
