--- a/testing.tex
+++ b/testing.tex
@@ -76,7 +76,7 @@ generator.
 \begin{figure}[h]
         \centering
         \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{BeTTy_website.png}
+        \includegraphics[width=0.8\hsize,angle=0]{BeTTy_website2.png}
         \linefigure
         \caption{BeTTy parameters.}\label{fig:plot:betty:params}
 \end{figure}
@@ -123,9 +123,9 @@ the sum of the probabilities of the previous parameters.
 \begin{figure}[h]
         \centering
         \linefigure
-        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_times.eps}
+        \includegraphics[width=0.8\hsize,angle=0]{plot_probs_times_FeatureModel3000.eps}
         \linefigure
-        \caption{Computing time analysis for a model consisting of 1500 features.}\label{fig:plot:probs:times}
+        \caption{Computing time analysis for a model consisting of 3000 features.}\label{fig:plot:probs:times}
 \end{figure}
 
 Figure~\ref{fig:plot:probs:times} shows the obtained
@@ -175,13 +175,13 @@ where a feature require 60 milliseconds to be processed.
 \begin{figure}[h]
         \centering
         \begin{minipage}[b]{0.48\textwidth}
-                \includegraphics[width=\textwidth]{plot_probs_probs.eps}
-\caption{Probabilistic analysis for a 1500 features model.}\label{fig:plot:probs:probs}
+                \includegraphics[width=\textwidth]{plot_probs_FeatureModel3000.eps}
+\caption{Probabilistic analysis for a 3000 features model.}\label{fig:plot:probs:probs}
         \end{minipage}
         \hfill
         \begin{minipage}[b]{0.48\textwidth}
-                \includegraphics[width=\textwidth]{FeatureModel1500Features_histogram.eps}
-        \caption{Probabilistic histogram for processing a 1500 features model.}\label{fig:plot:probs:probs:sorted}
+                \includegraphics[width=\textwidth]{plot_probs_histogram_FeatureModel3000.eps}
+        \caption{Probabilistic histogram for processing a 3000 features model.}\label{fig:plot:probs:probs:sorted}
         \end{minipage}
 \end{figure}
 
