--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1898,3 +1898,19 @@ note={},
 }
 
 
+@inproceedings{sg12,
+	author = {Segura, Sergio and Galindo, Jos{\'e} A. and Benavides, David and Parejo, Jos{\'e} A. and Ruiz-Cort{\'e}s, Antonio},
+	title = {BeTTy: Benchmarking and Testing on the Automated Analysis of Feature Models},
+	booktitle = {Proceedings of the Sixth International Workshop on Variability Modeling of Software-Intensive Systems},
+	series = {VaMoS '12},
+	year = {2012},
+	isbn = {978-1-4503-1058-1},
+	pages = {63--71},
+	numpages = {9},
+	doi = {10.1145/2110147.2110155},
+}
+
+
+
+
+
