--- a/testing.tex
+++ b/testing.tex
@@ -67,9 +67,10 @@ Firstly, we have carried out an experiment to
 show the computing time required to calculate the probability of having
 each feature in the set of valid products.
 In order to run this experiment, a variability model consisting of
-1500 features has been used.
+3000 features has been used.
 This variability model
-has been generated using BeTTy~\cite{SeguraHBC11}.
+has been generated using BeTTy~\cite{sg12}, in specific 
+its web version\footnote{\url{https://betty.services.governify.io/}}.
 Figure~\ref{fig:plot:betty:params} depicts the parameters used in the feature models
 generator.
 
