Threats to validity

--- a/introduction.tex
+++ b/introduction.tex
@@ -295,7 +295,7 @@ Section \ref{sec:equivalenceMain} is used to prove the equivalence between the o
 In section \ref{sec:stat:hidMain} we extend our language to define how sets of features can be hidden. This new
 hidden operator allows to improve the execution of the probabilistic
 extension execution, as it allows to remove those features that are not required to calculate the probability.
-Section~\ref{sec:stat:impl} presents an empirical study that has been carried out by using our implementation of the denotational semantics for the probabilistic extension.
+Section~\ref{sec:stat:impl} presents an empirical study that has been carried out by using our implementation of the denotational semantics for the probabilistic extension. The threats to validity of our empirical study are discussed in Section~\ref{section_threats}.
 Finally, section~\ref{section:jstat:concs} presents our conclusions and some research lines for the upcoming work.
 
 
