--- a/threats.tex
+++ b/threats.tex
@@ -19,7 +19,8 @@ Other issues might arise due to the random nature of the generated feature model
 
 External validity concerns the extent to which the results of a study can be generalized.
 
-We have used 3 different configurations to generate feature models in our empirical study. Also, for each configuration, 30 different models - per number of features - have been generated. In essence, we are interested in investigating the overall performance of our implementation. Since features involved in a \textit{Conjunction} relationship require more computing time to be processed, the idea is to increase the probability of having a \textit{Conjunction} relationship in the models. Hence, although we believe that these models are representative for our empirical study, we cannot guarantee that the same results are obtained for other scenarios.
+We have used 4 different configurations to generate feature models in our empirical study (1 for Section \ref{sec:stat:impl:model:analysis} and 3 for Section \ref{sec:stat:impl:performance:analysis}).
+Also, for each configuration we have been generated 11 different models for Section \ref{sec:stat:impl:model:analysis} and 30 for Section \ref{sec:stat:impl:performance:analysis} - per number of features -. In essence, we are interested in investigating the overall performance of our implementation. Since features involved in a \textit{Conjunction} relationship require more computing time to be processed, the idea is to increase the probability of having a \textit{Conjunction} relationship in the models, like is described in Table \ref{scalaExperiment}. Hence, although we believe that these models are representative for our empirical study, we cannot guarantee that the same results are obtained for other scenarios.
 
 
 %%%------------------------------------------------------------------------------------------
@@ -27,7 +28,8 @@ We have used 3 different configurations to generate feature models in our empiri
 
 Construct validity concerns whether the used measures are representative or not.
 
-We measured the overall performance of our approach based on the execution time and memory consumption, which are widely used in the community. All the experiments have been carried out using the same computer.
+We measured the overall performance of our approach based on the execution time and memory consumption,
+which are widely used in the community. All the experiments have been carried out using the same computing node described in Section \ref{sec:stat:impl}.
 
 
 
