--- a/syntax.tex
+++ b/syntax.tex
@@ -73,10 +73,10 @@ $\require{A}{B}{P}$,  $\forbid{A}{P}$, and $\mandatory{A}{P}$.
 In~\cite{acl13,clc16} we demonstrated that
 the binary
 operators are commutative and associative.
-As a result, the
-\emph{choose-one} operator ($\cdot\choice_{p}\cdot$) and the
-\emph{conjunction} operator ($\cdot\paral\cdot$) are $n$-ary operators
-instead of just binary operators.
+% As a result, the
+% \emph{choose-one} operator ($\cdot\choice_{p}\cdot$) and the
+% \emph{conjunction} operator ($\cdot\paral\cdot$) are $n$-ary operators
+% instead of just binary operators.
 
 
 % The Extended BNF in Definition~\ref{dfn:syntax} says
