--- a/related_work.tex
+++ b/related_work.tex
@@ -91,34 +91,30 @@ Also, they do not explicitly work on
 the translation of \FODA\ to represent probabilities and they do
 not introduce the notion of hiding those not needed features to
 calculate the probability of a specific feature.
-
-In particular, there exist mathematical verification models that
-allow the representation of the products - of a product line - using models,
-like discrete time Markov chain families, for representing the probabilistic behavior of all
-the products in the product line~\cite{vk13}. Their implementations do not
-provide a literal translation between the existing variability models, like FODA,
-and, therefore, these do not provide implementations over their practical uses.
-However, these approaches present analysis techniques that should have
-a significant impact on the effort to compute variability models.
-In specific for ~\cite{vk13} when comparing the way probabilities are computed,
-for each Markov process, the sum of the probabilities of the transitions
-when doing a transition from an state
-to another state must always sum 1.
 %
-In the case of the probabilistic extension
-presented in this research article the sum of all the traces when computing the same
-product must be 1, with some other cases explained in the syntax and semantics section.
+%
+%
+%
+%
+
+
+
+
+In particular, there exist mathematical verification models that allow the representation of the products - of a product line - using models, like discrete time Markov chain families, for representing the probabilistic behavior of all the products in the product line~\cite{Dubslaff2015} and~\cite{vk13}, in this particular case representing them using operational semantics.
+%
+The main differences between both~\cite{Dubslaff2015} and~\cite{vk13} with respect to the current probabilistic extension is that~\cite{Dubslaff2015} and~\cite{vk13} are not basing their definitions of implementations in providing a literal translation between the existing variability models, like FODA, and, therefore, these do not provide implementations over their practical uses.
+
+However, these approaches present analysis techniques that should have a significant impact on the effort to compute variability models. In specific for~\cite{vk13} when comparing the way probabilities are computed, for each Markov process, the sum of the probabilities of the transitions when doing a transition from an state to another state must always sum 1.
+%
+In the case of the probabilistic extension presented in this research article, in particular when the operational semantics of the probabilistic extension is defined, we need to take into account all the traces when we produce a valid product.  When all the traces are computed, if those traces represent the same set of features, the sum of all the computed probabilities for those traces must be 1, with some other cases explained in the syntax and semantics section.
 
 Also, the formal representation of~\cite{Dubslaff2015} is given in terms of Markov decision processes for
-representing the probabilistic information, which is not used particularly in this research paper. 
-Instead of having sub-states with the probabilistic information we add the probabilistic data itself to
-the operational semantics definition.
+representing the probabilistic information, which is not used particularly in this research paper.  Instead of having sub-states with the probabilistic information we add the probabilistic data itself to the operational semantics definition.
 %
-The compositional framework defined in~\cite{Dubslaff2015} do not have a direct translation from well known graphical
-representations of feature models like \FODA\ making them to skip the representation of other relationships
-commonly represented, like the cross tree constraints for the inclusion or exclusion of specific features. Thus
-they include the parallel composition of the features and a the fact that each feature can have a different cardinality in the
-model, allowing that the same feature can be multiple times in the same product.
+The compositional framework defined in~\cite{Dubslaff2015} do not have a direct translation from well known graphical representations of feature models like \FODA\ making them to skip the representation of other relationships commonly represented, like the cross tree constraints for the inclusion or exclusion of specific features.
+%
+In the contrary they represent the parallel composition of the features and a the fact that each feature can have a different cardinality in the model, allowing that the same feature can be multiple times in the same product.
+
 
 
 In previous years, the studies focusing the analysis of variability models  - and
