--- a/related_work.tex
+++ b/related_work.tex
@@ -106,7 +106,7 @@ The main differences between both~\cite{Dubslaff2015} and~\cite{vk13} with respe
 
 However, these approaches present analysis techniques that should have a significant impact on the effort to compute variability models. In specific for~\cite{vk13} when comparing the way probabilities are computed, for each Markov process, the sum of the probabilities of the transitions when doing a transition from an state to another state must always sum 1.
 %
-In the case of the probabilistic extension presented in this research article, in particular when the operational semantics of the probabilistic extension is defined, we need to take into account all the traces when we produce a valid product.  When all the traces are computed, if those traces represent the same set of features, the sum of all the computed probabilities for those traces must be 1, with some other cases explained in the syntax and semantics section.
+In the case of the probabilistic extension presented in this research article, in particular when the operational semantics of the probabilistic extension is defined, we need to take into account all the traces when we produce a valid product.  When all the traces are computed, if those traces represent the same set of features, the sum of all the computed probabilities for those traces can be up to 1.
 
 Also, the formal representation of~\cite{Dubslaff2015} is given in terms of Markov decision processes for
 representing the probabilistic information, which is not used particularly in this research paper.  Instead of having sub-states with the probabilistic information we add the probabilistic data itself to the operational semantics definition.
