--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \usepackage[inline]{enumitem}
 \usepackage[colorinlistoftodos, textsize=tiny, shadow]{todonotes} %
 \def\review{\includegraphics[width=4em]{review.jpg}}
-
+%\usepackage[numbers]{natbib}
 
 
 \usepackage[pagewise]{lineno}
@@ -96,7 +96,7 @@
 
 
 %\bibliographystyle{splncs03}
-\bibliographystyle{ieeetr}
+\bibliographystyle{IEEEtran}
 \bibliography{concu,concuPL}
 \newpage
 
