--- a/related_work.tex
+++ b/related_work.tex
@@ -6,7 +6,7 @@ The study of probabilistic extensions of formal methods can be dated
 back to the end of the 1980s. This is already a well established area,
 with many extensive contributions to include probabilistic information
 in classical formalisms (I/O Automata, Finite State Machines,
-(co-)algebraic approaches, among 
+(co-)algebraic approaches, among
 others)~\cite{hm09,aprs11,sok11,hn12,dghm14,agl16,Dubslaff2015}.
 %others)~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dp07,dghm08,hm09,aprs11,sok11,hn12,dghm14,agl16,Dubslaff2015}.
 %
@@ -98,28 +98,68 @@ calculate the probability of a specific feature.
 %
 
 
+There are proposals that allow the introduction of probabilities in
+feature models. For instance \cite{Dubslaff2015} uses Markow Decision
+processes to represent the behavior of products. Whereas in
+\cite{vk13}, the behavior of the system.
+The variability on those formalisms is modeled existing tools like FODA or
+just propositional logic to describe their products.
+On the contrary, our
+contributions focuses on defining a probabilistic language to describe
+the products. We use the probabilities to quantify how relevant is a
+product of a feature within the product line.
 
+% In particular, there exist mathematical verification models that allow
+% the representation of the products - of a product line - using models,
+% like discrete time Markov chain families, for representing the
+% probabilistic behavior of all the products in the product
+% line~\cite{Dubslaff2015} and~\cite{vk13}, in this particular case
+% representing them using operational semantics.
+% %
+% The main differences between both~\cite{Dubslaff2015} and~\cite{vk13}
+% with respect to the current probabilistic extension is
+% that~\cite{Dubslaff2015} and~\cite{vk13} are not basing their
+% definitions of implementations in providing a literal translation
+% between the existing variability models, like FODA, and, therefore,
+% these do not provide implementations over their practical uses.
 
-In particular, there exist mathematical verification models that allow the representation of the products - of a product line - using models, like discrete time Markov chain families, for representing the probabilistic behavior of all the products in the product line~\cite{Dubslaff2015} and~\cite{vk13}, in this particular case representing them using operational semantics.
-%
-The main differences between both~\cite{Dubslaff2015} and~\cite{vk13} with respect to the current probabilistic extension is that~\cite{Dubslaff2015} and~\cite{vk13} are not basing their definitions of implementations in providing a literal translation between the existing variability models, like FODA, and, therefore, these do not provide implementations over their practical uses.
+% However, these approaches present analysis techniques that should have
+% a significant impact on the effort to compute variability models. In
+% specific for~\cite{vk13} when comparing the way probabilities are
+% computed, for each Markov process, the sum of the probabilities of the
+% transitions when doing a transition from an state to another state
+% must always sum 1.
+% %
+% In the case of the probabilistic extension presented in this research
+% article, in particular when the operational semantics of the
+% probabilistic extension is defined, we need to take into account all
+% the traces when we produce a valid product.  When all the traces are
+% computed, if those traces represent the same set of features, the sum
+% of all the computed probabilities for those traces can be up to 1 ,
+% also~\cite{vk13} models probabilistic systems and not probabilistic
+% software product lines.
 
-However, these approaches present analysis techniques that should have a significant impact on the effort to compute variability models. In specific for~\cite{vk13} when comparing the way probabilities are computed, for each Markov process, the sum of the probabilities of the transitions when doing a transition from an state to another state must always sum 1.
-%
-In the case of the probabilistic extension presented in this research article, in particular when the operational semantics of the probabilistic extension is defined, we need to take into account all the traces when we produce a valid product.  When all the traces are computed, if those traces represent the same set of features, the sum of all the computed probabilities for those traces can be up to 1
-, also~\cite{vk13} models probabilistic systems and not probabilistic software product lines.
-
-Also, the formal representation of~\cite{Dubslaff2015} is given in terms of Markov decision processes for
-representing the probabilistic information, which is not used particularly in this research paper.  Instead of having sub-states with the probabilistic information we add the probabilistic data itself to the operational semantics definition.
-%
-The compositional framework defined in~\cite{Dubslaff2015} do not have a direct translation from well known graphical representations of feature models like \FODA\ making them to skip the representation of other relationships commonly represented, like the cross tree constraints for the inclusion or exclusion of specific features.
-%
-In the contrary they represent the parallel composition of the features and a the fact that each feature can have a different cardinality in the model, allowing that the same feature can be multiple times in the same product.
+% Also, the formal representation of~\cite{Dubslaff2015} is given in
+% terms of Markov decision processes for representing the probabilistic
+% information, which is not used particularly in this research paper.
+% Instead of having sub-states with the probabilistic information we add
+% the probabilistic data itself to the operational semantics definition.
+% %
+% The compositional framework defined in~\cite{Dubslaff2015} do not have
+% a direct translation from well known graphical representations of
+% feature models like \FODA\ making them to skip the representation of
+% other relationships commonly represented, like the cross tree
+% constraints for the inclusion or exclusion of specific features.
+% %
+% In the contrary they represent the parallel composition of the
+% features and a the fact that each feature can have a different
+% cardinality in the model, allowing that the same feature can be
+% multiple times in the same product.
 
 
 
 In previous years, the studies focusing the analysis of variability models  - and
-their practical applications - with realistic use cases 
+their practical applications - with realistic use cases
 have demonstrated that those uses cases do not describe such complex models~\cite{jhf11, jhfes12}. Thus, these
 can be processed in the practice without much algorithmic sophistication or
 complex analysis.
@@ -130,8 +170,8 @@ line modeling~\cite{jhfes12}. Moreover, it is described that those models for de
 lines does not always apply to the
 formal definition and description of software
 product lines, as they are not directly related~\cite{cds06, fub06, nnz14}.
-Recent implementations, like ProFeat~\cite{Chrszon2018}, allow to 
-help in the verification of requirements for families of probabilistic systems. These implementations,  
+Recent implementations, like ProFeat~\cite{Chrszon2018}, allow to
+help in the verification of requirements for families of probabilistic systems. These implementations,
 together with PRISM~\cite{mgd12}, use their own language and are based on Markov decision processes.
 
 
@@ -158,7 +198,7 @@ together with PRISM~\cite{mgd12}, use their own language and are based on Markov
 %y
 
 %M. Varshosaz and R. Khosravi, \Discrete time markov chain families: Modeling
-%42 and verication of probabilistic software product lines," pp. 34{41, 08 2013.	
+%42 and verication of probabilistic software product lines," pp. 34{41, 08 2013.
 
 
 
