--- a/concuPL.bib
+++ b/concuPL.bib
@@ -1847,15 +1847,26 @@
 
 
 
-@InProceedings{vk13,
-author = {Varshosaz, Mahsa and Khosravi, Ramtin},
-year = {2013},
-month = {08},
-pages = {34-41},
-title = {Discrete time Markov chain families: Modeling and verification of probabilistic software product lines},
-journal = {ACM International Conference Proceeding Series},
-doi = {10.1145/2499777.2500725}
+
+@Comment url = {http://doi.acm.org/10.1145/2499777.2500725},
+@inproceedings{vk13,
+ author = {Varshosaz, Mahsa and Khosravi, Ramtin},
+ title = {Discrete Time Markov Chain Families: Modeling and Verification of Probabilistic Software Product Lines},
+ booktitle = {Proceedings of the 17th International Software Product Line Conference Co-located Workshops},
+ series = {SPLC '13 Workshops},
+ year = {2013},
+ isbn = {978-1-4503-2325-3},
+ location = {Tokyo, Japan},
+ pages = {34--41},
+ numpages = {8},
+ doi = {10.1145/2499777.2500725},
+ acmid = {2500725},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {probabilistic model checking, software product line, variable discrete time Markov chains},
 }
+
+
 
 @inproceedings{jhf11,
  author = {Johansen, Martin Fagereng and Haugen, \Oystein and Fleurey, Franck},
@@ -1867,7 +1878,7 @@ doi = {10.1145/2499777.2500725}
  location = {Wellington, New Zealand},
  pages = {638--652},
  numpages = {15},
-}  
+}
 
 @inproceedings{jhfes12,
  author = {Johansen, Martin Fagereng and Haugen, \Oystein and Fleurey, Franck and Eldegard, Anne Grete and Syversen, Torbj{\o}rn},
@@ -1909,8 +1920,3 @@ note={},
 	numpages = {9},
 	doi = {10.1145/2110147.2110155},
 }
-
-
-
-
-
