--- a/testing.tex
+++ b/testing.tex
@@ -206,8 +206,7 @@ of the features ranges between 0.5 and 1.
 %
 Thus, there are 235 features with, at least, a probability equal to 0.90 of being in a final product.
 As a conclusion, this analysis might allow us to establish that by testing only
-the 7.83\% of the software product line components (235 features) we can ensure that,
-will be tested components commonly distributed in the 90\% of the products generated using the referenced model.
+the 7.83\% of the software product line components (235 features), we can ensure that those components commonly distributed in the 90\% of the products, generated using the referenced model, will be tested.
 
 It is important to differentiate the probabilities defined in BeTTy, which are used to generate a
 feature model, and the probability - calculated from the model - to have a feature in a final
@@ -358,7 +357,10 @@ In this case, we use the implementation of the denotational semantic from
 \fodaPA~\cite{acl13} to process the models, which do not use probabilistic
 information. If we use only the executions that successfully process the model,
 the worst case scenario requires 786.126 seconds to process a model containing 150
-features.
+features. Additionally, Figure~\ref{fig:cluster} shows the results published in 
+\fodaPAc~\cite{clc16}, where the models used for the simulations were processed in
+an 8-node cluster. In this case, the generated models only contain 17 features and
+the best time for processing the model is approximately 300 seconds.
 
 \begin{figure}[t]
         \centering
@@ -408,14 +410,6 @@ features.
 \end{figure}
 
 
-
-
-Also, based on the results published in \fodaPAc~\cite{clc16},
-the models used for the simulations were processed in
-an 8-node cluster. However, these models only contains 17 features.
-Figure~\ref{fig:cluster} shows the algorithm behavior
-which best time its approximately 300 seconds.
-
 \begin{figure}[t]
         \centering
         \linefigure
@@ -439,14 +433,14 @@ which best time its approximately 300 seconds.
         \caption{Cluster execution times for 1, 2, 4 and 8 nodes; and 1, 2, 4, 8, 16 and 32 workers  from~\cite{clc16}.}\label{fig:cluster}
 \end{figure}
 
-For those specific implementations and
-simulations we can conclude
-that the denotational semantics of the probabilistic
-extension implementation improves dramatically
-the performance
-in comparison with the denotational semantics implementations
-presented in previous works~\cite{acl13,clc16}.
-
+It is important to remark that the number of features of the models generated in 
+these previous works is considerably lower than the number of features of the models 
+used in this empirical study. Since algorithms developed in~\cite{acl13,clc16} require a 
+high computational power to process the models,
+it was unfeasible to use models containing thousands of features. Consequently, in this case,
+the obtained results show that the performance of the denotational semantics of the 
+probabilistic extension implementation allows to process larger models more efficiently than 
+the denotational semantics implementations presented in previous works~\cite{acl13,clc16}.
 
 Following, we provide the answers to the research questions.
 
