--- a/testing.tex
+++ b/testing.tex
@@ -69,7 +69,7 @@ each feature in the set of valid products.
 In order to run this experiment, a variability model consisting of
 3000 features has been used.
 This variability model
-has been generated using BeTTy~\cite{sg12}, in specific 
+has been generated using BeTTy~\cite{sg12}, in specific
 its web version\footnote{\url{https://betty.services.governify.io/}}.
 Figure~\ref{fig:plot:betty:params} depicts the parameters used in the feature models
 generator.
@@ -460,7 +460,7 @@ can state that the answer is yes, it is possible to translate current graphical
 representations of feature models, like \FODA, to represent and support probabilistic
 information.
 
-\textbf{RQ2}: Is it possible to extend \fodaPA in such a way that
+\textbf{RQ2}: Is it possible to extend \fodaPA\ in such a way that
 translates the probabilistic information from the graphical representation to a formal representation?
 
 General use models have been proposed to model variability in software
